fix for excessive bold on Helvetica Neue Bold and tight letter spacing

--- a/guide/guide copy.css
+++ b/guide/guide copy.css
@@ -56,7 +56,7 @@ body {
 }
 
 b {
-    font-family: "Helvetica Neue", sans-serif;
+    font-family: "Helvetica Neue Bold", sans-serif;
     /*font-weight: 600;*/
 }
 
@@ -75,7 +75,7 @@ ul {
 
 h1 {
   color: #000;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Helvetica Neue Bold", sans-serif;
   font-size: 5em;
   /*font-weight: bold;*/
   line-height: 1.3em;
@@ -89,10 +89,10 @@ h1 {
 
 h2 {
   color: #000;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Helvetica Neue Bold", sans-serif;
   font-size: 3em;
   /*font-weight: bold;*/
-  letter-spacing: 0px;
+  letter-spacing: -1px;
   line-height: 1.21;
   margin-top: 70px;
   margin-bottom: 20px;
@@ -104,10 +104,10 @@ h2 {
 
 h3 {
     color: #000;
-    font-family: "Helvetica Neue", sans-serif;
+    font-family: "Helvetica Neue Bold", sans-serif;
     font-size: 1.5em;
     /*font-weight: bold;*/
-    letter-spacing: 0px;
+    letter-spacing: -1px;
     margin-top: 60px;
     margin-right: 0px;
     text-decoration: none;
@@ -117,7 +117,7 @@ h3 {
 
 h4 {
   color: #000;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Helvetica Neue Bold", sans-serif;
   font-size: 1em;
   /*font-weight: bold;*/
   letter-spacing: -0.5px;
@@ -174,7 +174,7 @@ pre {
 
 .infoTable th
 {
-    font-family: "Helvetica Neue", sans-serif;
+    font-family: "Helvetica Neue Bold", sans-serif;
 	text-align: left;
 	/*font-weight: bold;*/
 	padding-right: 1em;
